Issue #10158 - tests to prove out XML only based deployment technique (#10209)